# hardware-protocol-fuzzer

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  diag.c  frame.c  main.c  pico_host.h  session.c  transport.c  uart_selftest.c
backend/: csv_logger.c  session.c
desktop/: README.md
desktop/cross-platform-prototype/: README.md  app.js  index.html  styles.css
desktop/macos-prototype/: Makefile  README.md
desktop/qt-frontend-prototype/: CMakeLists.txt  README.md  qt-frontend-prototype.pro  resources.qrc
desktop/qt-frontend-prototype/src/: backend_bridge.cpp  backend_bridge.h  fuzz_orchestrator.cpp  fuzz_orchestrator.h  fuzz_results_model.cpp  fuzz_results_model.h  main.cpp  main_window.cpp  main_window.h
docs/: contract.md  mainpage.md  protocol_layout.h
dut/: rpi4_dut_target.py
firmware/: main.c
firmware/capture/: capture_common.c  capture_common.h  capture_i2c.c  capture_i2c.h  capture_i2c.pio  capture_uart.c  capture_uart.h  capture_uart.pio  trace_encoder.c  trace_encoder.h
firmware/fuzz/: fuzz_engine.c  fuzz_engine.h  fuzz_i2c_tx.c  fuzz_i2c_tx.h  fuzz_uart_tx.c  fuzz_uart_tx.h  fuzz_worker.c  fuzz_worker.h  fuzzer_corpus.c  fuzzer_corpus.h  fuzzer_mutator.c  fuzzer_mutator.h  fuzzer_orchestrator.c  fuzzer_orchestrator.h
firmware/protocol/: protocol.c  protocol.h  protocol_handler_dispatcher.c  protocol_handlers.c  protocol_handlers.h  protocol_handlers_dispatcher.h  protocol_layout.h
firmware/ringbuffer/: ringbuffer.c  ringbuffer.h
firmware/session/: session.c  session.h
firmware/test/: debug_protocol.py  debug_raw.py  pico_sniffer.py  test_i2c.py  test_uart.py
firmware/usb/: tusb_config.h  usb_descriptors.c  usb_transport.c  usb_transport.h
firmware/utils/: crc16.c  crc16.h  (+2 more)
(+1 files in other folders)
